--- a/frontend/src/components/InfoBlock/InfoBlock.module.scss
+++ b/frontend/src/components/InfoBlock/InfoBlock.module.scss
@@ -16,7 +16,10 @@
     box-shadow: 0px 0px 20px 5px rgba(14, 116, 192, 0.2);
     color: black;
   }
-  &_tonBridges {
+  &_tonBridges,
+  &_governance,
+  &_lastBlock,
+  &_transactionStats {
     background-color: rgba(82, 161, 219, 0.35);
     padding: 15px;
     color: black;
@@ -28,20 +31,14 @@
     :global(.status) {
       text-transform: none;
       float: right;
-      &:global(.available) {
-        color: green;
-      }
-      &:global(.not_available) {
-        color: red;
-      }
     }
-  }
-  &_governance {
-    background-color: rgba(82, 161, 219, 0.35);
-    padding: 15px;
-    color: black;
-    font-weight: bold;
-    text-align: start;
+    :global(.MuiTypography-h4) {
+      font-weight: 800;
+      font-size: 24px;
+      line-height: 30px;
+      color: #303757;
+      margin-bottom: 5px;
+    }
   }
 }
 .splittedBlock {
