--- a/frontend/src/components/ui/Navbar/Navbar.module.scss
+++ b/frontend/src/components/ui/Navbar/Navbar.module.scss
@@ -5,9 +5,9 @@
   padding: 0 !important;
   &Title {
     color: #313855;
-    font-weight: 800;
-    font-size: 28px;
-    line-height: 35px;
+    font-weight: 800 !important;
+    font-size: 35px !important;
+    line-height: 35px !important;
   }
 
   .toggleButton {
